--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,10 @@ jobs:
 #        with:
 #          ref: ${{ steps.use_checkout_ref.outputs.ref }}
 
-      - name: Checkout ${{ github.event_name == 'workflow_dispatch' && '' || github.head_ref }}
+      - name: Checkout ${{ github.event_name == 'workflow_dispatch' && github.head_ref || '' }}
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'workflow_dispatch' && '' || github.head_ref }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.head_ref || '' }}
 
       - name: Output README.md
         shell: bash
