--- a/.github/workflows/scheduled-1.yml
+++ b/.github/workflows/scheduled-1.yml
@@ -1,13 +1,13 @@
 ---
-name: "scheduled-main"
+name: "scheduled-1"
 on:
   schedule:
     - cron: '5 * * * *'
   workflow_dispatch:
 
 jobs:
-  nightly-main:
-    name: "dispatch-nightly-main"
+  nightly-1:
+    name: "dispatch-nightly-1"
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
